--- a/browser/index.html
+++ b/browser/index.html
@@ -8,7 +8,12 @@
 
             #gameScreen {
                 border: 1px solid black;
-                background-color: "fff";
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                -moz-transform: translateX(-50%) translateY(-50%);
+                -webkit-transform: translateX(-50%) translateY(-50%);
+                transform: translateX(-50%) translateY(-50%);
             }
 
             img {
@@ -19,9 +24,7 @@
     </head>
 
     <body>
-        <center>
-            <canvas id="gameScreen" width="1200" height="600"></canvas>
-        </center>
+        <canvas id="gameScreen" width="1200" height="600"></canvas>
 
         <script src="src/index.js" type="module"></script>
     </body>
