some minor tweaks

--- a/web/index.html
+++ b/web/index.html
@@ -15,10 +15,13 @@
             img {
                 display: none;
             }
+            body {
+                overflow: hidden;
+            }
         </style>
     </head>
     <body>
-        <canvas id="gameScreen" width="1200" height="600"></canvas>
+        <canvas id="gameScreen" width="1000" height="500"></canvas>
         <script src="src/index.js" type="module"></script>
     </body>
 </html>
