--- a/web/index.html
+++ b/web/index.html
@@ -12,16 +12,18 @@
                 -webkit-transform: translateX(-50%) translateY(-50%);
                 transform: translateX(-50%) translateY(-50%);
             }
-            img {
-                display: none;
-            }
-            body {
+            html, body {
+                width: 100%;
+                height: 100%;
+                margin: 0px;
+                border: 0;
                 overflow: hidden;
+                display: block;
             }
         </style>
     </head>
     <body>
-        <canvas id="gameScreen" width="1000" height="500"></canvas>
+        <canvas id="gameScreen"</canvas>
         <script src="src/index.js" type="module"></script>
     </body>
 </html>
