--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Slime Volleyball</title>
+        <link rel="icon" href="/img/slime.ico" type="image/x-icon"/>
         <meta charset="UTF-8" />
         <style>
             #gameScreen {
@@ -13,6 +14,7 @@
                 transform: translateX(-50%) translateY(-50%);
             }
             html, body {
+                background-color: #222222;
                 width: 100%;
                 height: 100%;
                 margin: 0px;
