improved collision detection, etc.

--- a/web/index.html
+++ b/web/index.html
@@ -25,7 +25,7 @@
         </style>
     </head>
     <body>
-        <canvas id="gameScreen"</canvas>
+        <canvas id="gameScreen" width="0" height="0"</canvas>
         <script src="src/index.js" type="module"></script>
     </body>
 </html>
