renamed files, small updates

--- a/web/slime.html
+++ b/web/slime.html
@@ -13,6 +13,7 @@
                 -webkit-transform: translateX(-50%) translateY(-50%);
                 transform: translateX(-50%) translateY(-50%);
             }
+
             html, body {
                 background-color: #222222;
                 width: 100%;
@@ -26,6 +27,6 @@
     </head>
     <body>
         <canvas id="gameScreen" width="0" height="0"</canvas>
-        <script src="src/index.js" type="module"></script>
+        <script src="src/slime.js" type="module"></script>
     </body>
 </html>
